--- a/Resources/Maps/Shuttles/striker.yml
+++ b/Resources/Maps/Shuttles/striker.yml
@@ -184,6 +184,14 @@ entities:
           - 0
           - 0
           - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
         chunkSize: 4
     - type: GasTileOverlay
     - type: RadiationGridResistance
@@ -191,6 +199,7 @@ entities:
       shakeTimes: 10
     - type: SpreaderGrid
     - type: GridPathfinding
+    - type: NukeOpsShuttle
 - proto: AirCanister
   entities:
   - uid: 91
@@ -198,8 +207,8 @@ entities:
     - type: Transform
       pos: -0.5,-8.5
       parent: 325
-    - type: AtmosDevice
-      joinedGrid: 325
+    - type: PolymorphableCanister
+      currentPrototype: AirCanister
 - proto: AirlockExternalShuttleSyndicateLocked
   entities:
   - uid: 142
@@ -825,6 +834,10 @@ entities:
           occludes: True
           ents:
           - 245
+        disk_slot: !type:ContainerSlot
+          showEnts: False
+          occludes: True
+          ent: null
 - proto: CyberPen
   entities:
   - uid: 77
@@ -1041,8 +1054,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -0.5,-8.5
       parent: 325
-    - type: AtmosDevice
-      joinedGrid: 325
 - proto: GasVentPump
   entities:
   - uid: 218
@@ -1054,8 +1065,6 @@ entities:
       address: Vnt-5f41a0ae
       transmitFrequency: 1621
       receiveFrequency: 1621
-    - type: AtmosDevice
-      joinedGrid: 325
   - uid: 219
     components:
     - type: Transform
@@ -1066,8 +1075,6 @@ entities:
       address: Vnt-129c27d2
       transmitFrequency: 1621
       receiveFrequency: 1621
-    - type: AtmosDevice
-      joinedGrid: 325
   - uid: 220
     components:
     - type: Transform
@@ -1078,8 +1085,6 @@ entities:
       address: Vnt-11c4609d
       transmitFrequency: 1621
       receiveFrequency: 1621
-    - type: AtmosDevice
-      joinedGrid: 325
   - uid: 221
     components:
     - type: Transform
@@ -1090,8 +1095,6 @@ entities:
       address: Vnt-6859729f
       transmitFrequency: 1621
       receiveFrequency: 1621
-    - type: AtmosDevice
-      joinedGrid: 325
   - uid: 222
     components:
     - type: Transform
@@ -1102,8 +1105,6 @@ entities:
       address: Vnt-19d24c7f
       transmitFrequency: 1621
       receiveFrequency: 1621
-    - type: AtmosDevice
-      joinedGrid: 325
 - proto: GeneratorBasic15kW
   entities:
   - uid: 41
@@ -1456,6 +1457,13 @@ entities:
     components:
     - type: Transform
       pos: 1.561105,-2.5567772
+      parent: 325
+- proto: OxygenTankFilled
+  entities:
+  - uid: 167
+    components:
+    - type: Transform
+      pos: 1.60798,-0.3062118
       parent: 325
 - proto: PinpointerNuclear
   entities:
@@ -2379,11 +2387,4 @@ entities:
           occludes: True
           ents:
           - 346
-- proto: YellowOxygenTankFilled
-  entities:
-  - uid: 167
-    components:
-    - type: Transform
-      pos: 1.60798,-0.3062118
-      parent: 325
 ...
