--- a/Resources/Prototypes/Entities/Structures/Machines/nuke.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/nuke.yml
@@ -95,6 +95,13 @@
     bodyType: Dynamic
 
 - type: entity
+  parent: NuclearBomb
+  id: NuclearBombSyndicate
+  suffix: syndicate
+  components:
+  - type: NuclearBombSyndicate
+
+- type: entity
   parent: StorageTank
   id: NuclearBombKeg
   name: nuclear fission explosive
