--- a/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
@@ -24,6 +24,14 @@
   equipment:
     neck: ClothingNeckCloakRd
 
+- type: itemLoadout # WD
+  id: ResearchDirectorCloakLuxurious
+  equipment: ResearchDirectorCloakLuxurious
+- type: startingGear
+  id: ResearchDirectorCloakLuxurious
+  equipment:
+    neck: ClothingNeckCloakRdLuxurious
+
 # Jumpsuit
 - type: itemLoadout
   id: ResearchDirectorJumpsuit
