add full headset to security lockers and vendors

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/secdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/secdrobe.yml
@@ -7,7 +7,7 @@
     ClothingHeadHatBeret: 4
     ClothingHeadHatSecsoft: 4
     ClothingHeadBandRed: 4
-    ClothingHeadsetSecurity: 4
+    ClothingHeadsetAltSecurity: 4
     ClothingEyesGlassesSecurity: 4
     ClothingOuterWinterSec: 4
     ClothingUniformJumpsuitSec: 4
