--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -1603,7 +1603,7 @@
   loadouts:
   - SecurityCommandHeadset
 
-- type: loadoutGroup
+- type: loadoutGroup # WD
   id: CommonSecurityHeadsetFull
   name: loadout-group-ears
   loadouts:
