--- a/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
@@ -124,7 +124,8 @@
   - type: Speech
     speechVerb: LargeMob
   - type: NightVision
-    toggleSound: null
+    activateSound: null
+    deactivateSound: null
     color: "#404040"
 
 - type: entity
