--- a/Resources/Prototypes/_White/Entities/Cult/Items/tome_craft.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/tome_craft.yml
@@ -40,6 +40,7 @@
     - type: ClothingGrantComponent
       component:
       - type: NightVision
+        isActive: true
         toggleAction: null
         activateSound: null
         deactivateSound: null
