--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -64,7 +64,8 @@
     - type: ShowCultHud
     - type: IsDeadIC
     - type: NightVision
-      toggleSound: null
+      activateSound: null
+      deactivateSound: null
       color: White
     - type: ShowHealthBars
       damageContainers:
