--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -185,9 +185,7 @@
         Piercing: 0.9
         Heat: 0.9
   - type: FlashImmunity # WD edit
-  - type: ClothingGrantComponent # WD
-    component:
-    - type: FlashSoundSuppression
+  - type: FlashSoundSuppression # WD edit
 
 #Brigmedic Hardsuit
 - type: entity
@@ -215,9 +213,8 @@
   - type: PressureProtection
     highPressureMultiplier: 0.6
     lowPressureMultiplier: 1000
-  - type: ClothingGrantComponent # WD
-    component:
-    - type: FlashSoundSuppression
+  - type: FlashImmunity # WD edit
+  - type: FlashSoundSuppression # WD edit
 
 #Warden's Hardsuit
 - type: entity
@@ -244,9 +241,7 @@
         Piercing: 0.9
         Heat: 0.9
   - type: FlashImmunity # WD edit
-  - type: ClothingGrantComponent # WD
-    component:
-    - type: FlashSoundSuppression
+  - type: FlashSoundSuppression # WD edit
 
 #Captain's Hardsuit
 - type: entity
@@ -263,9 +258,8 @@
   - type: PressureProtection
     highPressureMultiplier: 0.3
     lowPressureMultiplier: 1000
-  - type: ClothingGrantComponent # WD
-    component:
-    - type: FlashSoundSuppression
+  - type: FlashImmunity # WD edit
+  - type: FlashSoundSuppression # WD edit
 
 #Inspector's Hardsuit
 - type: entity
@@ -364,9 +358,7 @@
         Piercing: 0.9
         Heat: 0.9
   - type: FlashImmunity
-  - type: ClothingGrantComponent # WD
-    component:
-    - type: FlashSoundSuppression
+  - type: FlashSoundSuppression
 
 #Luxury Mining Hardsuit
 - type: entity
