--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -374,11 +374,11 @@
   - CommonSecurityCommandMask # WD
   - HeadofSecurityNeck
   - HeadofSecurityJumpsuit
-  - CommonSecurityBackpack
-  - HeadofSecurityOuterClothing
   - CommonGloves # WD
+  - CommonSecurityBackpack
   - CommonSecurityShoes
   - HeadofSecurityPDA
+  - CommonSecurityJobTrinkets # WD
   - Trinkets
 
 - type: roleLoadout
@@ -393,6 +393,7 @@
   - CommonGloves # WD
   - CommonSecurityShoes
   - WardenPDA
+  - CommonSecurityJobTrinkets # WD
   - Trinkets
 
 - type: roleLoadout
@@ -408,6 +409,7 @@
   - CommonGloves # WD
   - CommonSecurityShoes
   - SeniorOfficerPDA
+  - CommonSecurityJobTrinkets # WD
   - Trinkets
 
 - type: roleLoadout
@@ -420,10 +422,11 @@
   - SecurityJumpsuit
   - CommonSecurityBackpack
   - SecurityOuterClothing
+  - SecurityBelt # WD
   - CommonGloves # WD
   - CommonSecurityShoes
   - SecurityPDA
-  - SecurityBelt
+  - CommonSecurityJobTrinkets # WD
   - Trinkets
 
 - type: roleLoadout
@@ -439,6 +442,7 @@
   - DetectiveGloves
   - DetectiveShoes
   - DetectivePDA # WD
+  - CommonSecurityJobTrinkets # WD
   - Trinkets
 
 - type: roleLoadout
@@ -452,6 +456,7 @@
   - CommonGloves # WD
   - CommonSecurityShoes
   - SecurityCadetPDA
+  - CommonSecurityJobTrinkets # WD
   - Trinkets
 
 # Medical
@@ -491,12 +496,11 @@
   - CommonMedicalHeadset # WD
   - CommonMedicalMask # WD
   - MedicalDoctorJumpsuit
-  - MedicalGloves
   - MedicalBackpack
   - MedicalDoctorOuterClothing
-  - CommonMedicalShoes
-  - CommonMedicalGloves
-  - MedicalDoctorPDA
+  - CommonMedicalShoes # WD
+  - CommonMedicalGloves # WD
+  - MedicalDoctorPDA # WD
   - Trinkets
 
 - type: roleLoadout
@@ -521,10 +525,9 @@
   - ChemistEyes
   - CommonMedicalMask # WD
   - ChemistJumpsuit
-  - MedicalGloves
   - ChemistBackpack
   - ChemistOuterClothing
-  - CommonMedicalGloves
+  - CommonMedicalGloves # WD
   - ChemistShoes
   - ChemistPDA
   - Trinkets
