- tweak: Thermal tweaks.

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
@@ -155,6 +155,9 @@
         name: power-cell-slot-component-slot-name-default
         startingItem: PowerCellSmall
         disableEject: true
+  - type: ClothingGrantComponent
+    component:
+    - type: ThermalBlocker
 
 - type: entity
   parent: ClothingOuterBase
